# winnow

./: .envrc  pyproject.toml  setup.py
Winnow.egg-info/: PKG-INFO  SOURCES.txt
embeddings/: all_results.pkl  chroma_main.py
evaluation/: evaluation.py
evaluation/curation_rubric/: curation_rubric.py  dimension1.jinja2  dimension2.jinja2  dimension3.jinja2
harness/: .cache.db  harness.py
judge/prompts/: pairwise_comparison.jinja  reference_guided_grading.jinja  single_answer_grading.jinja
llms/: modeltest.py
model_test/: model_results.jsonl  modeltest.py
rerankers/: rerank.py
src/winnow/embeddings/: README.md  chroma_main.py
src/winnow/evaluation/: evaluation.py
src/winnow/evaluation/curation_rubric/: .cache.db  dimension1.jinja2  notes.md
src/winnow/harness/: harness.py
src/winnow/judge/prompts/: readme.md  reference_based_question_synthesis.jinja  single_answer_grading.jinja
src/winnow/llms/: model_results.jsonl  modeltest.py  pairwise_math.py
