[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winnow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.1.1",
    "conduit",
    "rerankers>=0.10.0",
    "sentence-transformers>=5.1.1",
    "torch",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/winnow"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/winnow/py.typed"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
kramer = { path = "../kramer-project", editable = true }
conduit = { path = "../conduit-project", editable = true }
