[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winnow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.1.1",
    "conduit",
    "rerankers>=0.10.0",
    "sentence-transformers>=5.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/winnow"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/winnow/py.typed"]

# -- Torch Dependency Management -----------------------------------------------
[project.optional-dependencies]
ml-server = ["torch==2.9.0+cu128"]  # Only for your ML server
default = ["torch==2.9.0"]           # Everything else

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# ── uv sources (local/editable deps) ───────────────────────────────────────────
# Also include torch from the custom index above
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
kramer = { path = "../kramer-project", editable = true }
conduit = { path = "../conduit-project", editable = true }
